feat: get endpoint for cashier
